prqlc/prql-compiler/tests/integration/snapshots/integration__sql@loop.prql.snap
---
source: prqlc/prql-compiler/tests/integration/main.rs
expression: "# clickhouse:skip (DB::Exception: Syntax error)\n# glaredb:skip (DataFusion does not support recursive CTEs https://github.com/apache/arrow-datafusion/issues/462)\nfrom [{n = 1}]\nselect n = n - 2\nloop (filter n < 4 | select n = n + 1)\nselect n = n * 2\nsort n\n"
input_file: prqlc/prql-compiler/tests/integration/queries/loop.prql
---
WITH RECURSIVE table_0 AS (
  SELECT
    1 AS n
),
table_1 AS (
  SELECT
    n - 2 AS _expr_0
  FROM
    table_0
  UNION
  ALL
  SELECT
    _expr_0 + 1
  FROM
    table_1
  WHERE
    _expr_0 < 4
)
SELECT
  _expr_0 * 2 AS n
FROM
  table_1 AS table_2
ORDER BY
  n

