prqlc/prql-compiler/tests/integration/snapshots/integration__sql@pipelines.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "# sqlite:skip (Only works on Sqlite implementations which have the extension\n# installed\n# https://stackoverflow.com/questions/24037982/how-to-use-regexp-in-sqlite)\n\nfrom tracks\n\nfilter (name ~= \"Love\")\nfilter ((milliseconds / 1000 / 60) | in 3..4)\nsort track_id\ntake 1..15\nselect {name, composer}\n"
input_file: prql-compiler/tests/integration/queries/pipelines.prql
---
WITH table_0 AS (
  SELECT
    name,
    composer,
    track_id
  FROM
    tracks
  WHERE
    REGEXP(name, 'Love')
    AND milliseconds / 1000 / 60 BETWEEN 3 AND 4
  ORDER BY
    track_id
  LIMIT
    15
)
SELECT
  name,
  composer
FROM
  table_0
ORDER BY
  track_id

